# Starry

./: Cargo.toml  Makefile  crates.js  index.html  rust-toolchain.toml  search-index.js  src-files.js
api/linux_syscall_api/: Cargo.toml
api/linux_syscall_api/src/: lib.rs  trap.rs
api/linux_syscall_api/src/syscall_fs/ctype/: file.rs
api/linux_syscall_api/src/syscall_fs/imp/: io.rs
api/linux_syscall_api/src/syscall_task/imp/: schedule.rs  task.rs
arceos_api/: all.html  enum.AxError.html  type.AxResult.html
arceos_posix_api/: all.html
arch_boot/: all.html  index.html
arm_gic/: all.html  enum.InterruptType.html  enum.TriggerMode.html  fn.translate_irq.html  index.html  struct.GicV2.html  struct.GicV3.html  struct.IntId.html  trait.GenericArmGic.html
axalloc/: all.html  index.html  struct.GlobalPage.html  struct.PhysPage.html
axconfig/: all.html  constant.ARCH.html  constant.FAMILY.html  constant.KERNEL_BASE_PADDR.html  constant.KERNEL_BASE_VADDR.html  constant.MAX_USER_HEAP_SIZE.html  constant.MAX_USER_STACK_SIZE.html  constant.MMIO_REGIONS.html  constant.PCI_BUS_END.html  constant.PCI_ECAM_BASE.html  constant.PCI_RANGES.html  constant.PHYS_MEMORY_BASE.html  constant.PHYS_MEMORY_END.html  constant.PHYS_MEMORY_SIZE.html  constant.PHYS_VIRT_OFFSET.html  constant.PLATFORM.html  constant.SIGNAL_TRAMPOLINE.html  constant.SMP.html  constant.TASK_STACK_SIZE.html  constant.TESTCASE_MEMORY_SIZE.html  constant.TESTCASE_MEMORY_START.html  constant.TICKS_PER_SEC.html  constant.TIMER_FREQUENCY.html  constant.USER_HEAP_BASE.html  constant.USER_MEMORY_START.html  constant.USER_STACK_TOP.html  constant.VIRTIO_MMIO_REGIONS.html  index.html
axdriver/: fn.init_drivers.html  index.html
axerrno/: enum.AxError.html  enum.LinuxError.html  index.html  macro.ax_err.html  macro.ax_err_type.html  macro.ensure.html  type.AxResult.html  type.LinuxResult.html
axfs/: all.html  constant.BLOCK_SIZE.html  fn.init_filesystems.html  index.html
axfs_devfs/: all.html  index.html  struct.RandomDev.html
axfs_ramfs/: all.html  index.html  struct.DirNode.html  struct.FileNode.html  struct.INTERRUPT.html  struct.Interrupts.html
axfs_vfs/: struct.VfsNodePerm.html  type.VfsError.html
axhal/: all.html  constant.KERNEL_PROCESS_ID.html  index.html
axio/: enum.Error.html  enum.SeekFrom.html  index.html  struct.BufReader.html  struct.PollState.html  trait.BufRead.html  trait.Read.html  trait.Seek.html  trait.Write.html  type.Result.html
axlibc/: index.html
axmem/: all.html  index.html  static.KEY_TO_SHMID.html  static.SHARED_MEMS.html  struct.MapArea.html  struct.MemBackend.html  struct.MemorySet.html
axnet/: all.html  enum.IpAddr.html  fn.bench_receive.html  fn.bench_transmit.html  fn.dns_query.html  fn.from_core_sockaddr.html  fn.init_network.html  fn.into_core_sockaddr.html  fn.poll_interfaces.html  index.html  struct.Duration.html  struct.Ipv4Addr.html  struct.SocketAddr.html  struct.TcpSocket.html  struct.UdpSocket.html
axprocess/: all.html  fn.current_process.html  fn.current_task.html  fn.exit_current_task.html  fn.get_task_ref.html  fn.handle_page_fault.html  fn.init_kernel_process.html  fn.load_app.html  fn.set_child_tid.html  fn.sleep_now_task.html  fn.time_stat_from_kernel_to_user.html  fn.time_stat_from_user_to_kernel.html  fn.time_stat_output.html  fn.wait_pid.html  fn.yield_now_task.html  index.html  static.PID2PC.html  static.TID2TASK.html  struct.Process.html
axruntime/: all.html  fn.entered_cpus_num.html  fn.exit_main.html  fn.is_init_ok.html  fn.rust_main.html  fn.rust_main_secondary.html  index.html  static.KERNEL_PAGE_TABLE.html
axsignal/: all.html  index.html  struct.SignalHandler.html  struct.SignalSet.html
axstarry/: all.html  fn.fs_init.html  fn.init_current_dir.html  fn.println.html  fn.recycle_user_process.html  fn.run_testcase.html  index.html
axstd/: index.html
axtask/: all.html  enum.SchedPolicy.html  enum.TaskState.html  fn.current.html  fn.current_check_preempt_pending.html  fn.current_may_uninit.html  fn.exit.html  fn.init_scheduler.html  fn.init_scheduler_secondary.html  fn.join.html  fn.new_task.html  fn.on_timer_tick.html  fn.run_idle.html  fn.set_priority.html  fn.sleep.html  fn.sleep_until.html  fn.spawn.html  fn.spawn_raw.html  fn.vfork_suspend.html  fn.wake_vfork_process.html  fn.yield_now.html  index.html  sidebar-items.js  static.EXITED_TASKS.html  static.IDLE_TASK.html  static.RUN_QUEUE.html  struct.CurrentTask.html  struct.SchedStatus.html  struct.TaskId.html  struct.TaskInner.html  struct.WaitQueue.html  type.AxTaskRef.html
axtrap/: all.html  fn.init_interrupt.html  index.html
capability/: index.html  struct.Cap.html  struct.CapError.html  struct.WithCap.html
crates/kernel_guard_base/: Cargo.toml
crates/preempt_guard/: Cargo.toml
driver_block/: trait.BlockDriverOps.html
driver_display/: index.html  trait.DisplayDriverOps.html
elf_parser/: all.html  fn.get_app_stack_region.html  fn.get_auxv_vector.html  fn.get_elf_entry.html  fn.get_elf_segments.html  index.html  struct.ELFSegment.html
entry/arch_boot/: Cargo.toml
entry/arch_boot/src/: alloc.rs  lib.rs  mp.rs
entry/arch_boot/src/platform/: mod.rs
entry/arch_boot/src/platform/riscv64_qemu_virt/: mod.rs  mp.rs
entry/arch_boot/src/platform/x86_pc/: mod.rs  mp.rs
kernel_guard/: all.html  index.html  sidebar-items.js  struct.IrqSave.html  struct.NoOp.html  struct.NoPreempt.html  struct.NoPreemptIrqSave.html  trait.BaseGuard.html
linux_syscall_api/: all.html  fn.create_link.html  fn.init_current_dir.html  fn.new_file.html  fn.read_file.html  fn.recycle_user_process.html  fn.run_testcase.html  index.html  struct.File.html  struct.FilePath.html  struct.OpenFlags.html  type.FileFlags.html  (+2 more)
modules/arch_boot/: Cargo.toml
modules/arch_boot/src/: alloc.rs  lib.rs
modules/arch_boot/src/platform/: mod.rs
modules/arch_boot/src/platform/riscv64_qemu_virt/: mod.rs  mp.rs
modules/arch_boot/src/platform/x86_pc/: mod.rs
modules/run_queue/: Cargo.toml
modules/run_queue/src/: lib.rs  run_queue.rs
of/: all.html  (+12 more)
ulib/axstarry/: Cargo.toml
ulib/axstarry/src/: lib.rs
(+635 files in other folders)
