[package]
name = "kernel_guard_base"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "RAII wrappers to create a critical section with local IRQs or preemption disabled"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/crates/kernel_guard_base"
documentation = "https://rcore-os.github.io/arceos/kernel_guard_base/index.html"
keywords = ["arceos", "synchronization", "preemption"]
categories = ["os", "no-std"]

[features]
default = []

[dependencies]
cfg-if = "1.0"
