[package]
name = "arch_boot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]
alloc = ["dep:axalloc"]
smp = []

[dependencies]
log = "0.4"
cfg-if = "1.0"
axtrap = { path = "../axtrap" }
mkboot = { path = "../mkboot" }
axhal = { path = "../axhal" }
axconfig = { path = "../axconfig" }
axalloc = { path = "../axalloc", optional = true }
early_console = { path = "../../crates/early_console" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
x86_64 = "0.14"
x2apic = "0.4"
raw-cpuid = "11.0"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.10"
sbi-rt = { version = "0.0.2", features = ["legacy"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.3"
tock-registers = "0.8"
arm_gic = { path = "../../crates/arm_gic" }
arm_pl011 = { path = "../../crates/arm_pl011" }
dw_apb_uart = { path = "../../crates/dw_apb_uart" }

[build-dependencies]
axconfig = { path = "../axconfig" }
