[package]
name = "run_queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sched_cfs", "preempt"]

sched_cfs = []
preempt = []

[dependencies]
log = "0.4"
taskctx = { path = "../taskctx" }
spinbase = { path = "../../crates/spinbase" }
lazy_init = { path = "../../crates/lazy_init" }
scheduler = { path = "../../crates/scheduler" }
