[package]
name = "axstarry"
version = "0.1.0"
edition = "2021"

authors = ["Youjie Zheng <zyj578335934@gmail.com>"]
description = "ArceOS user program library for linux apps with posix_syscall"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["monolithic"]

monolithic = ["linux_syscall_api/monolithic", "axfeat/monolithic", "paging", "fs", "multitask", "irq", "signal", "net"]

img = ["linux_syscall_api/img"]

# Multicore
smp = ["axfeat/smp"]

# Floating point/SIMD
fp_simd = ["axfeat/fp_simd"]

# Interrupts
irq = ["linux_syscall_api/irq", "axfeat/irq"]

# Memory
paging = ["axfeat/paging", "linux_syscall_api/paging"]
tls = ["axfeat/tls"]

# Multi-threading and scheduler
multitask = ["linux_syscall_api/multitask", "axfeat/multitask"]
sched_fifo = ["axfeat/sched_fifo"]
sched_rr = ["axfeat/sched_rr"]
sched_cfs = ["axfeat/sched_cfs"]

# Display
display = ["axfeat/display"]

# Bus-Pci
bus-pci = ["axfeat/bus-pci"]

# Fs
fs = ["linux_syscall_api/fs"]
fatfs = ["linux_syscall_api/fatfs"]
ext4fs = ["linux_syscall_api/ext4fs", "axlibc/fs"]
myfs = ["linux_syscall_api/myfs"]
devfs = []

# Signal
signal = ["linux_syscall_api/signal"]

# Network
net = ["linux_syscall_api/net"]

# Logging
log-level-off = ["axfeat/log-level-off"]
log-level-error = ["axfeat/log-level-error"]
log-level-warn = ["axfeat/log-level-warn"]
log-level-info = ["axfeat/log-level-info"]
log-level-debug = ["axfeat/log-level-debug"]
log-level-trace = ["axfeat/log-level-trace"]

[dependencies]
linux_syscall_api = { path = "../../api/linux_syscall_api" }
axfeat = { path = "../../api/axfeat" }
axlibc = { path = "../axlibc", optional = true }
axlog = { path = "../../modules/axlog" }